--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-macos is-frameless is-hidden-frameles
 USE_FULL_RESOLUTION_IMAGES=false
 THEME=https://raw.githubusercontent.com/Jopp-gh/Obsidian-Dune84/HEAD/theme.css
 BASE_THEME=light
-dgHomeLink=true
+dgHomeLink=false
 dgPassFrontmatter=true
 dgShowBacklinks=true
 dgShowLocalGraph=true
