--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SITE_NAME_HEADER=Hermitage
+SITE_NAME_HEADER=Charles Hoots
 SITE_MAIN_LANGUAGE=en
 SITE_BASE_URL=https://charleshoots.net
 SHOW_CREATED_TIMESTAMP=true
