--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ USE_FULL_RESOLUTION_IMAGES=false
 THEME=https://raw.githubusercontent.com/Jopp-gh/Obsidian-Dune84/HEAD/theme.css
 BASE_THEME=light
 dgHomeLink=true
-dgPassFrontmatter=true
+dgPassFrontmatter=false
 dgShowBacklinks=true
 dgShowLocalGraph=true
 dgShowInlineTitle=true
